<resources>
    <string name="app_name" translatable="false">Go4Lunch</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps_fragment" translatable="false">Map</string>
    <string name="action_search">Search…</string>
    <string name="connection_succeed">Connection succeed.</string>
    <string name="error_authentication_canceled" translatable="false">Authentication canceled.</string>
    <string name="error_no_internet" translatable="false">No internet connection found.</string>
    <string name="error_unknown_error" translatable="false">Unknown error.</string>
    <string name="facebook_app_id" translatable="false">291228668132951</string>
    <string name="fb_login_protocol_scheme" translatable="false">1f3f07281abd6c9314bad51d2547e115</string>
    <string name="button_login_text_logged">Log in</string>
    <string name="button_login_text_not_logged">Sign in</string>
    <string name="info_no_email_found" translatable="false">Email not found.</string>
    <string name="info_no_username_found" translatable="false">No username found.</string>
    <string name="label_google_sign_in" translatable="false">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in" translatable="false">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login" translatable="false">Firebase + Facebook Login</string>
    <string name="desc_facebook_login" translatable="false">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login" translatable="false">Firebase + Twitter Login</string>
    <string name="desc_twitter_login" translatable="false">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword" translatable="false">Email/Password Authentication</string>
    <string name="desc_emailpassword" translatable="false">Use an email and password to authenticate with Firebase.</string>
    <string name="label_passwordless" translatable="false">Passwordless Authentication</string>
    <string name="desc_passwordless" translatable="false">Use only an email to authenticate with Firebase.</string>
    <string name="label_phone_auth" translatable="false">Phone Number Authentication</string>
    <string name="desc_phone_auth" translatable="false">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth" translatable="false">Anonymous Authentication</string>
    <string name="desc_anonymous_auth" translatable="false">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth" translatable="false">Custom Authentication</string>
    <string name="desc_custom_auth" translatable="false">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui" translatable="false">FirebaseUI Auth</string>
    <string name="desc_firebase_ui" translatable="false">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="label_generic_idp" translatable="false">Generic IDP Auth</string>
    <string name="desc_generic_idp" translatable="false">Use a generic identity provider, like Microsoft or Yahoo, to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token" translatable="false">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link" translatable="false">Send Link</string>
    <string name="sign_out" translatable="false">Sign Out</string>
    <string name="verify_email" translatable="false">Verify Email</string>
    <string name="disconnect" translatable="false">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token" translatable="false">Custom Token</string>
    <string name="signed_in" translatable="false">Signed In</string>
    <string name="signed_out" translatable="false">Signed Out</string>
    <string name="token_null" translatable="false">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup" translatable="false">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth" translatable="false">Start</string>
    <string name="verify_phone_auth" translatable="false">Verify</string>
    <string name="resend_phone_auth" translatable="false">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code" translatable="false">Verification Code</string>
    <string name="status_code_sent" translatable="false">Code Sent</string>
    <string name="status_verification_failed" translatable="false">Verification failed</string>
    <string name="status_verification_succeeded" translatable="false">Verification succeeded</string>
    <string name="status_sign_in_failed" translatable="false">Sign-in failed</string>
    <string name="instant_validation" translatable="false">(instant validation)</string>
    <string name="firebase_status_fmt" translatable="false">Firebase User: %s</string>
    <string name="firebase_user_management" translatable="false">Firebase User Management</string>
    <string name="google_status_fmt" translatable="false">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt" translatable="false">Facebook User: %s</string>
    <string name="facebook_title_text" translatable="false">Facebook Login</string>
    <string name="emailpassword_status_fmt" translatable="false">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text" translatable="false">Email and Password</string>
    <string name="passwordless_status_fmt" translatable="false">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text" translatable="false">Passwordless Sign In</string>
    <string name="status_email_not_sent" translatable="false">Send link to your email to get started.</string>
    <string name="status_email_sent" translatable="false">Link sent, check your email to continue.</string>
    <string name="status_link_found" translatable="false">Link received, enter email to sign in.</string>
    <string name="phone_title_text" translatable="false">Phone Number</string>
    <string name="twitter_status_fmt" translatable="false">Twitter User: %s</string>
    <string name="twitter_title_text" translatable="false">Twitter Login</string>
    <string name="firebaseui_status_fmt" translatable="false">Firebase User: %s</string>
    <string name="firebaseui_title_text" translatable="false">FirebaseUI Auth</string>
    <string name="generic_title_text" translatable="false">Generic IDP Sign In\nwith Microsoft</string>
    <string name="msft_status_fmt" translatable="false">Microsoft User: %s</string>
    <string name="id_fmt" translatable="false">User ID: %s</string>
    <string name="email_fmt" translatable="false">Email: %s</string>
    <string name="app_subtitle">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="email_sign_in">Sign in with email</string>
    <string name="sign_in_with_google" translatable="false">Sign in with Google</string>
    <string name="sign_in_with_facebook" translatable="false">Sign in with Facebook</string>
    <string name="intent_places_list" translatable="false">intent_places_list</string>
    <string name="fragment_places_list" translatable="false">Places List</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="map_view" translatable="false">Map View</string>
    <string name="list_view" translatable="false">List View</string>
    <string name="workmates_view" translatable="false">Workmates</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Receive a daily notification</string>
    <string name="title_activity_maps2" translatable="false">Map</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
</resources>