<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_map_view"
        android:enabled="true"
        android:title="@string/map_view"
        android:icon="@drawable/ic_map_black_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_list_view"
        android:enabled="true"
        android:title="@string/list_view"
        android:icon="@drawable/ic_list_black_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_workmates_view"
        android:enabled="true"
        android:title="@string/workmates_view"
        android:icon="@drawable/ic_group_black_24dp"
        app:showAsAction="ifRoom"
        />

</menu>