<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nav_header_background"
    android:orientation="vertical">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
    android:layout_height="150dp"
    android:src="@drawable/food_in_bowl_big"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="60sp"
        android:textAlignment="center"
        android:layout_marginTop="-10dp"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_subtitle"
        android:textAlignment="center"
        android:layout_marginTop="-15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/colorWhite"
        android:textStyle="italic"
        android:textSize="12sp" />

<LinearLayout
    android:id="@+id/sign_in_btn_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



    <LinearLayout
        android:id="@+id/emailPasswordFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:hint="@string/hint_email"
            android:layout_gravity="center_horizontal"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />


    <LinearLayout
        android:id="@+id/emailPasswordButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/create_with_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="#C41B00"
        android:layout_weight="1"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="2.5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="@dimen/smallTxtSize"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/sign_in_with_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="#C41B00"
            android:layout_weight="1"
            android:layout_marginStart="2.5dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_sign_in"
                android:textSize="@dimen/smallTxtSize"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>

        <FrameLayout
            android:id="@+id/frameLayout_Google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            
            <Button
                android:id="@+id/sign_in_with_google"
                style="@style/LoginButton"
                android:backgroundTint="#FFFFFF"
                android:text="Sign in with Google"
                android:drawableStart="@drawable/ic_google_24dp"
                android:textColor="@color/colorBlack"/>

        </FrameLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/sign_in_with_facebook"
                style="@style/LoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_rectangle"
                android:backgroundTint="@color/colorFacebook"
                android:textColor="@color/colorWhite"/>

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/sign_in_with_twitter"
                style="@style/LoginButton"
                android:text="Sign in with Twitter"
                android:drawableStart="@drawable/fui_ic_twitter_bird_white_24dp"
                android:textColor="@color/colorWhite" />


    </LinearLayout>
</LinearLayout>
</LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>